KMotion_dotNet/DM RS274 Interpreter/KM_Interpreter_Interop.cs


        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_GCodeInterpreter_ConvertAbsToUserUnitsX(IntPtr handle, double x);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_GCodeInterpreter_ConvertAbsToUserUnitsY(IntPtr handle, double y);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_GCodeInterpreter_ConvertAbsToUserUnitsZ(IntPtr handle, double z);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_GCodeInterpreter_ConvertAbsToUserUnitsA(IntPtr handle, double a);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_GCodeInterpreter_ConvertAbsToUserUnitsB(IntPtr handle, double b);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_GCodeInterpreter_ConvertAbsToUserUnitsC(IntPtr handle, double c);


        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_GCodeInterpreter_InvokeAction(IntPtr handle, int i, bool flushbeforeunbufferedoperation);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_GCodeInterpreter_Interpret(IntPtr handle,
              int board_type,
              string fname,
              int start, int end,
              int restart);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_GCodeInterpreter_ExecutePC(IntPtr handle, string name);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_GCodeInterpreter_DoExecute(IntPtr handle);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_GCodeInterpreter_DoExecuteComplete(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_SetHalt(IntPtr handle);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern bool KM_dotnet_Interop_GCodeInterpreter_GetHalt(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_SetAbort(IntPtr handle);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern bool KM_dotnet_Interop_GCodeInterpreter_GetAbort(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_ReadAndSyncCurPositions
            (IntPtr handle, ref double x, ref double y, ref double z, ref double a, ref double b, ref double c);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_ReadCurInterpreterPosition
            (IntPtr handle, ref double x, ref double y, ref double z, ref double a, ref double b, ref double c);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_ReadCurMachinePosition
            (IntPtr handle, ref double x, ref double y, ref double z, ref double a, ref double b, ref double c);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_ConvertAbsoluteToMachine
            (IntPtr handle, double x, double y, double z, double a, double b, double c, 
            ref double xp, ref double yp, ref double zp, ref double ap, ref double bp, ref double cp);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_ConvertAbsoluteToInterpreterCoord
            (IntPtr handle, double x, double y, double z, double a, double b, double c,
            ref double xp, ref double yp, ref double zp, ref double ap, ref double bp, ref double cp);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_SetToolFile(IntPtr handle, string name);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern string KM_dotnet_Interop_GCodeInterpreter_GetToolFile(IntPtr handle);


        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_SetSetupFile(IntPtr handle, string name);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern string KM_dotnet_Interop_GCodeInterpreter_GetSetupFile(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_GCodeInterpreter_SetVarsFile(IntPtr handle, string name);
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern string KM_dotnet_Interop_GCodeInterpreter_GetVarsFile(IntPtr handle);
    }
}